# sonarr_bot

./: Dockerfile  compose.yml  pyproject.toml  run.sh
src/sonarr_bot/: __init__.py  bot.py  handlers.py
